@@ -1,9 +1,0 @@
-# ${prefix}/etc/ax25/flexd.conf - flexd example configuration file
-# node route is defined in ${prefix}/etc/ax25/flexd.routes
-#
-MyCall		f6bvp
-PollInterval	3600
-#
-FlexGate	kd4yal-14
-#FlexGate	f6ggy-4
-#
